--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # Object file
-*.o
+Package Control.last-run
+Package Control.ca-list
+Package Control.ca-bundle
+Package Control.system-ca-bundle
+Package Control.cache/
+Package Control.ca-certs/
+encoding_cache.json
 
 # Ada Library Information
-*.ali
+
